# iterative-solver

./: .gitignore  BackwardSubstitutionSolver.h  Benchmark.h  CMakeLists.txt  ConjugateGradientUpdateStrategy.h  GaussSeidelUpdateStrategy.h  GradientUpdateStrategy.h  IterativeSolver.h  JacobiUpdateStrategy.h  MatrixReader.h  README.md  Solver.h  UpdateStrategy.h  benchmarkresults.cpp  benchmarkresults.h  bibliography.bib  classDiagram.puml  cover.tex  iterative-solver.pro  main.cpp  main.tex  mainCLI.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  runner.h  slides-diagram.puml  timer.cpp  timer.h  uiutils.cpp  uiutils.h
Matrices/: cond.mtx  vem1.mtx  vem2.mtx
QTInterface/: CMakeLists.txt  benchmarkresults.cpp  benchmarkresults.h  benchmarkresults.ui  chart.cpp  chart.h  chart.ui  errordialog.cpp  errordialog.h  errordialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resultswindow.cpp  resultswindow.h  resultswindow.ui
cli/: CMakeLists.txt  mainCLI.cpp
cli/command/: Command.h  Solve.cpp  Solve.h  Test.cpp  Test.h
cli/exceptions/: FileNotFoundException.h
lib/: Benchmark.h  CMakeLists.txt  ConjugateGradientUpdateStrategy.h  GaussSeidelUpdateStrategy.h  GradientUpdateStrategy.h  IterativeSolver.h  JacobiUpdateStrategy.h  MatrixReader.h  Solver.h  UpdateStrategy.h  timer.h
lib/exceptions/: NonSquareMatrixException.h  NonSymmetricAndPositiveDefiniteException.h  WrongParameterValueException.cpp  WrongParameterValueException.h
lib/solver/: BackwardSubstitutionSolver.h  ForwardSubstitutionSolver.h  IterativeSolver.h  IterativeSolverResult.h  MatrixUtil.h  NormType.h  Solver.h  SolverResults.h  constants.h  norm.h
lib/updateStrategy/: ConjugateGradientUpdateStrategy.h  GaussSeidelUpdateStrategy.h  GradientUpdateStrategy.h  JacobiUpdateStrategy.h  Strategy.h
lib/util/: Benchmark.h  MatrixReader.cpp  MatrixReader.h  PowerMethod.h  conditioningCheckMethods.h  timer.cpp  timer.h  util.h
report/: cover.tex
report/section/: introduction.tex
scripts/: Graphs.ipynb  Untitled.ipynb
scripts/.ipynb_checkpoints/: Graphs-checkpoint.ipynb
section/: analysis.tex  appendix.tex  architecture.tex  features.tex  introduction.tex
